--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -1,8 +1,9 @@
-on:
-  push:
+# on:
+  # push:
     # Sequence of patterns matched against refs/tags
-    tags:
-      - 'build-number-*' # Push events to matching build-number-, i.e. build-number-229
+    # tags:
+      # - 'build-number-*' # Push events to matching build-number-, i.e. build-number-229
+on: push
 
 name: Daily build changelog
 
