--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -8,25 +8,28 @@ on: push
 name: Daily build changelog
 
 jobs:
-  build:
-    name: "🧪 Create changelog"
+  build_number:
     runs-on: ubuntu-latest
     outputs:
-      build_number: ${{ steps.buildnumber.output.build_number }}
+        build_number: ${{ steps.buildnumber.outputs.build_number }}
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
       - name: "#️⃣ Generate Build Number"
         id: buildnumber
         uses: einaregilsson/build-number@v2
         with:
-          token: ${{ secrets.github_token }}
+            token: ${{ secrets.github_token }}
 
-      - name: "Show buildnumber tag"
+
+  build:
+    name: "🧪 Create changelog"
+    runs-on: ubuntu-latest
+    needs: [build_number]
+
+    steps:
+      - uses: actions/checkout@v1
+        
+      - name: "⚠️ Show buildnumber tag"
         run: | 
           echo "🚨 Build Number: " + ${{ steps.buildnumber.output.build_number }}
 
