--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -8,6 +8,26 @@ on: push
 name: Daily build changelog
 
 jobs:
+  generate_changelog:
+    name: "🧪 Generate changelog"
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: "🔍 Find latest build-number tag"
+      id: fetchlatestbuildnumber
+      run: |
+        echo "::set-output name=latest-build::$(git tag --list 'build-number-*' --sort=v:refname | head -1)\n"
+
+    - name: "🗒 Generate changelog"
+        uses: heinrichreimer/action-github-changelog-generator@v2.1.1
+        id: generate_changelog
+        with:
+          token: ${{ secrets.github_token }}            
+          sinceTag: ${{ steps.fetchlatestbuildnumber.outputs.latest-build }}
+          stripHeaders: "true"
+          stripGeneratorNotice: "true"
+          output: "build/Artifacts"
+
   build_number:
     runs-on: ubuntu-latest
     outputs:
@@ -19,26 +39,3 @@ jobs:
         uses: einaregilsson/build-number@v2
         with:
             token: ${{ secrets.github_token }}
-
-
-  build:
-    name: "🧪 Create changelog"
-    runs-on: ubuntu-latest
-    needs: [build_number]
-
-    steps:
-      - uses: actions/checkout@v1
-        
-      - name: "⚠️ Show buildnumber tag"
-        run: | 
-          echo "🚨 Build Number: ${{ needs.build_number.outputs.build_number }}"
-
-      - name: "🗒 Generate changelog"
-        uses: heinrichreimer/action-github-changelog-generator@v2.1.1
-        id: generate_changelog
-        with:
-          token: ${{ secrets.github_token }}            
-          sinceTag: "build-number-${{ needs.build_number.outputs.build_number }}"
-          stripHeaders: "true"
-          stripGeneratorNotice: "true"
-
