--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -14,11 +14,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      
+
       - name: "🔍 Find latest build-number tag"
         id: fetchlatestbuildnumber
         run: |
           echo "::set-output name=latest-build::$(git tag --list 'build-number-*' --sort=v:refname | head -1)"
+
+      - name: "Latest Build Number tag"
+        run: |
+          echo "BUILD TAG: ${{ steps.fetchlatestbuildnumber.outputs.latest-build }}"
 
       - name: "🗒 Generate changelog"
         uses: heinrichreimer/action-github-changelog-generator@v2.1.1
