--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # - uses: actions/checkout@v1
+      - uses: actions/checkout@v1
 
       - name: "🔍 Find latest build-number tag"
         id: fetchlatestbuildnumber
