Update changlog workflow 13

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -32,7 +32,7 @@ jobs:
           sinceTag: ${{ steps.fetchlatestbuildnumber.outputs.latest-build }}
           stripHeaders: "true"
           stripGeneratorNotice: "true"
-          output: "build/Artifacts"
+          output: "build/Artifacts/changelog.md"
 
   # build_number:
   #   runs-on: ubuntu-latest
