--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -31,7 +31,7 @@ jobs:
           token: ${{ secrets.github_token }}            
           sinceTag: ${{ steps.fetchlatestbuildnumber.outputs.latest-build }}
           # stripHeaders: "true"
-          # stripGeneratorNotice: "true"
+          stripGeneratorNotice: "true"
           output: "build/Artifacts/changelog.md"
 
       - name: "Echo changelog"
