Simplified workflow script 4

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: "🔍 Fetch merge commit descriptions"
         id: merge_commits
         run: |
-          git log $(git tag --list 'build-number-*' --sort=-v:refname | head -1).. --merges --pretty=format:"%b") 2>&1 | tee build/Artifacts/changelog.txt
+          git log $(git tag --list 'build-number-*' --sort=-v:refname | head -1).. --merges --pretty=format:"%b" 2>&1 | tee build/Artifacts/changelog.txt
       - name: "Echo changelog"
         run: |
           cat build/Artifacts/changelog.md
