--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -15,7 +15,7 @@ jobs:
       - name: "🔍 Fetch merge commit descriptions"
         id: merge_commits
         run: |
-          echo "::set-output name=changelog::$(git log $(git tag --list 'build-number-*' --sort=-v:refname | head -1).. --merges --pretty=format:"%b)"
+          echo "::set-output name=changelog::$(git log $(git tag --list 'build-number-*' --sort=-v:refname | head -1).. --merges --pretty=format:"%b")"
       
       - name: "Echo changelog"
         run: |
