Simplified workflow script 9

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -19,7 +19,7 @@ jobs:
       
       - name: "Echo changelog"
         run: |
-          ${{ steps.merge_commits.outputs.changelog }}
+          echo ${{ steps.merge_commits.outputs.changelog }}
 
       - name: "#️⃣ Generate Build Number"
         id: buildnumber
