Simplified workflow script 14

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: "Prepare changelog file"
         run: |
-          echo CHANGELOG:
+          echo CHANGELOG output:
           echo ${{ steps.merge_commits.outputs.changelog }}
           cat ${{ steps.merge_commits.outputs.changelog }} > changelog-build-number-${{ steps.buildnumber.outputs.build_number }}
 
