--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -18,9 +18,9 @@ jobs:
       - name: "Prepare changelog file"
         run: |
           echo ${{ steps.merge_commits.outputs.changelog }}
-          echo "CHANGELOG:\n" > changelog.md
+          echo "CHANGELOG:\n\n" > changelog.md
           echo "${{ steps.merge_commits.outputs.changelog }}" >> changelog.md
-          cat changelog.md
+          cat build/Artifacts/changelog.md
 
       - name: "Archive changelog"
         uses: actions/upload-artifact@v2
