--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -30,9 +30,12 @@ jobs:
           path: build/Artifacts
   
   read_file:
+    name: Fetching Artifacts
     runs-on: ubuntu-latest
+    needs: [generate_changelog]
 
     steps:
+      - uses: actions/checkout@v1
       - name: "Download changelog"
         uses: actions/download-artifact@v2
         with:
@@ -40,6 +43,7 @@ jobs:
           path: build/Artifacts
       
       - name: "Read the changes"
+        id: read_changelog
         run: |
           cat build/Artifacts/changelog.md
         
