Improved workflow script 30

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: "Prepare changelog file"
         run: |
-          $(git log --merges --pretty=format:"%b%n" $(git tag --list 'build-number-*' --sort=v:refname | head -1)..HEAD ) >> build/Artifacts/changelog.txt
+          $(git log --first-parent main --merges --pretty=format:"%b%n" $(git tag --list 'build-number-*' --sort=v:refname | head -1)..HEAD ) >> build/Artifacts/changelog.txt
           cat build/Artifacts/changelog.txt
 
       - name: "Archive changelog"
