Improved workflow script 34

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: "Prepare changelog file"
         run: |
-          git log --first-parent master --merges --pretty=format:"%b" $(git tag --list 'build-number-*' --sort=v:refname | head -1)..HEAD >> build/Artifacts/changelog.txt
+          $(git log --first-parent master --merges --pretty=format:"%b" $(git tag --list 'build-number-*' --sort=v:refname | head -1)..HEAD) >> build/Artifacts/changelog.txt
           cat build/Artifacts/changelog.txt
 
       - name: "Archive changelog"
