Improved workflow script 43

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -9,7 +9,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v2
-        fetch-depth: 2
+        with:
+          fetch-depth: 2
 
       - name: "Prepare changelog file"
         run: |
