Add sanity check step for changelog.txt

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -15,6 +15,10 @@ jobs:
       - name: "Prepare changelog file"
         run: "Support/Scripts/CI/Generate-Changelog"
 
+      - name: "Read changelog file"
+        run: |
+          echo build/Artifacts/changelog.txt
+
       - name: "Archive changelog"
         uses: actions/upload-artifact@v2
         with:
