Add sanity check for git log command

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -12,6 +12,14 @@ jobs:
         with:
           fetch-depth: 5
 
+      - name: "Sanity check the command"
+        run: |
+          git log \
+          --first-parent \
+          --merges \
+          --pretty=format:%b \
+          $(git tag --list 'build-number-*' --sort=-v:refname | head -1)..HEAD
+
       - name: "Prepare changelog file"
         run: "Support/Scripts/CI/Generate-Changelog"
 
