--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -14,11 +14,7 @@ jobs:
 
       - name: "Sanity check the command"
         run: |
-          git log \
-          --first-parent \
-          --merges \
-          --pretty=format:%b \
-          $(git tag --list 'build-number-*' --sort=-v:refname | head -1)..HEAD
+          git log --first-parent --merges --pretty=format:%b $(git tag --list 'build-number-*' --sort=-v:refname | head -1)..HEAD
 
       - name: "Prepare changelog file"
         run: "Support/Scripts/CI/Generate-Changelog"
